--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -47,7 +47,7 @@
       <input id="search" type="search" placeholder="ค้นหา..." autocomplete="off" />
 
       <button class="btn-ghost" id="btnCheckMe">🔎 เทส backend</button>
-      <button class="btn-ghost" id="btnLogs">📜 Logs</button> <!-- ✅ ปุ่ม Logs -->
+      <button class="btn-ghost" id="btnLogs">📜 Logs</button>
       <button class="btn-ghost" id="btnResetPw">🔑 รีเซ็ตรหัสผู้ใช้</button>
       <button class="btn-ghost" id="btnLogout">🚪 Logout</button>
     </div>
@@ -94,10 +94,22 @@
 <script>
 /* ---------- CONFIG ---------- */
 const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";   // 👈 เปลี่ยนเป็นของคุณ
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";                 // 👈 เปลี่ยนเป็นของคุณ
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
   auth: { persistSession: true, autoRefreshToken: true, detectSessionInUrl: true }
 });
+
+/* ✅ ตั้งค่า backend ของคุณ (ใช้สำหรับรีเซ็ตรหัสผ่านฝั่งเซิร์ฟเวอร์ด้วย service key) */
+const BACKEND_BASE = "https://backend-github-io-mrli.vercel.app"; // เช่น "http://localhost:8000" ถ้าไม่มีปล่อยว่าง ระบบจะ alert บอก
+
+/* ✅ Mapping ชื่อตาราง/คอลัมน์ให้แก้ง่ายเมื่อ editor เปลี่ยน */
+const TABLE = "qr_codes";   // เดิมใช้ "qrcodes" ถ้าคุณเปลี่ยน เช่น "qr_items" ให้แก้ตรงนี้
+const COLS = {
+  id: "id",                // ถ้า primary key เป็นชื่ออื่น เช่น "row_id" ให้แก้ตรงนี้
+  code: "uuid",            // ถ้าเปลี่ยนเป็น "qr_code" ให้แก้เป็น "qr_code"
+  ua: "user_agent",        // ถ้าเปลี่ยนเป็น "ua" ให้แก้เป็น "ua"
+  createdAt: "created_at"
+};
 
 /* ---------- ELEMENTS ---------- */
 const tbody = document.getElementById("tbody");
@@ -137,12 +149,12 @@ const st = { raw:[], filtered:[], page:1, pageSize:20 };
 function fmtDate(iso){const d = new Date(iso);return isNaN(d)? "-" : tzFmt.format(d);}
 function applyFilter(){
   let q=(search.value||"").trim().toLowerCase();
-  if (q.includes('@')) q = "";
+  if (q.includes('@')) q = ""; // กัน search email เผลอไปชน RLS/policy
   st.filtered = st.raw.filter(r=>{
     if(!q) return true;
-    return String(r.id).toLowerCase().includes(q)
-        || String(r.code||"").toLowerCase().includes(q)
-        || String(r.user_agent||"").toLowerCase().includes(q);
+    return String(r[COLS.id]).toLowerCase().includes(q)
+        || String(r[COLS.code]||"").toLowerCase().includes(q)
+        || String(r[COLS.ua]||"").toLowerCase().includes(q);
   });
   st.page=1;
 }
@@ -156,12 +168,12 @@ function render(){
     for(const r of rows){
       const tr = document.createElement("tr");
       tr.innerHTML = `
-        <td><input type="checkbox" class="rowcheck" value="${r.id}"></td>
-        <td>${r.id}</td>
-        <td><span>${r.code ?? ""}</span></td>
-        <td class="muted" title="${r.user_agent||""}">${r.user_agent||"-"}</td>
-        <td>${fmtDate(r.created_at)}</td>
-        <td class="right"><button class="btn-del" data-del="${r.id}">ลบ</button></td>`;
+        <td><input type="checkbox" class="rowcheck" value="${r[COLS.id]}"></td>
+        <td>${r[COLS.id]}</td>
+        <td><span>${r[COLS.code] ?? ""}</span></td>
+        <td class="muted" title="${r[COLS.ua]||""}">${r[COLS.ua]||"-"}</td>
+        <td>${fmtDate(r[COLS.createdAt])}</td>
+        <td class="right"><button class="btn-del" data-del="${r[COLS.id]}">ลบ</button></td>`;
       tbody.appendChild(tr);
     }
     tbody.querySelectorAll("[data-del]").forEach(btn=>btn.onclick=()=>deleteRow(btn.dataset.del));
@@ -177,29 +189,73 @@ function render(){
 async function loadData(){
   tbody.innerHTML = `<tr><td colspan="6" class="muted">กำลังโหลด...</td></tr>`;
   const { data, error } = await supabase
-    .from("qrcodes")
-    .select("id, code, user_agent, created_at")
-    .order("created_at",{ascending:false})
+    .from(TABLE)
+    .select([COLS.id, COLS.code, COLS.ua, COLS.createdAt].join(","))
+    .order(COLS.createdAt,{ascending:false})
     .limit(1000);
   if(error){ tbody.innerHTML = `<tr><td colspan="6">❌ ${error.message}</td></tr>`; return; }
   st.raw = data||[]; applyFilter(); render();
 }
 async function deleteRow(id){
   if(!confirm(`ลบรายการนี้หรือไม่? (${id})`)) return;
-  const { error } = await supabase.from("qrcodes").delete().eq("id", id);
+  const { error } = await supabase.from(TABLE).delete().eq(COLS.id, id);
   if(error){ alert("❌ "+error.message); return; }
-  st.raw = st.raw.filter(x=>String(x.id)!==String(id));
+  st.raw = st.raw.filter(x=>String(x[COLS.id])!==String(id));
   applyFilter(); render();
 }
 
-/* ---------- EXPORT / UI EVENTS ---------- */
-btnExport.onclick = ()=>{ /* ...โค้ดส่งออก CSV เหมือนเดิม... */ };
+/* ---------- EXPORT CSV ---------- */
+function toCsvValue(v){
+  if (v==null) return "";
+  const s = String(v);
+  if (s.includes('"') || s.includes(',') || s.includes('\n')) {
+    return `"${s.replace(/"/g,'""')}"`;
+  }
+  return s;
+}
+btnExport.onclick = ()=>{
+  // ใช้รายการที่กำลังแสดงผล (filtered) เพื่อให้สอดคล้องกับการค้นหา
+  const rows = st.filtered.map(r=>({
+    id: r[COLS.id],
+    code: r[COLS.code] ?? "",
+    user_agent: r[COLS.ua] ?? "",
+    created_at: r[COLS.createdAt] ?? ""
+  }));
+  const header = ["id","code","user_agent","created_at"];
+  const csv = [
+    header.join(","),
+    ...rows.map(obj => header.map(k => toCsvValue(obj[k])).join(","))
+  ].join("\n");
+  const blob = new Blob([csv], { type:"text/csv;charset=utf-8" });
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  const dt = new Date().toISOString().slice(0,19).replace(/[:T]/g,"-");
+  a.href = url;
+  a.download = `qrcodes-${dt}.csv`;
+  document.body.appendChild(a);
+  a.click();
+  a.remove();
+  URL.revokeObjectURL(url);
+};
+
+/* ---------- ลบหลายรายการ ---------- */
+btnBulkDelete.onclick = async ()=>{
+  const ids = [...document.querySelectorAll(".rowcheck:checked")].map(cb=>cb.value);
+  if (ids.length===0) { alert("ยังไม่ได้เลือกแถว"); return; }
+  if (!confirm(`ลบ ${ids.length} รายการหรือไม่?`)) return;
+  const { error } = await supabase.from(TABLE).delete().in(COLS.id, ids);
+  if (error) { alert("❌ "+error.message); return; }
+  st.raw = st.raw.filter(x=>!ids.includes(String(x[COLS.id])));
+  checkAll.checked = false;
+  applyFilter(); render();
+};
+
+/* ---------- UI EVENTS ---------- */
 btnReload.onclick = loadData;
 search.addEventListener('keyup', ()=>{ applyFilter(); render(); });
 search.addEventListener('search', ()=>{ applyFilter(); render(); });
 pageSize.onchange = ()=>{ st.pageSize=parseInt(pageSize.value,10); render(); };
 checkAll.onchange = ()=>{ document.querySelectorAll(".rowcheck").forEach(cb=> cb.checked = checkAll.checked); };
-btnBulkDelete.onclick = async ()=>{ /* ...โค้ดลบหลายรายการ... */ };
 btnLogout.onclick = async ()=>{ await supabase.auth.signOut(); window.location.href="login.html"; };
 
 /* ---------- LOGS BUTTON (เฉพาะ admin) ---------- */
@@ -212,10 +268,7 @@ btnLogs.onclick = async () => {
     .select("is_admin")
     .eq("id", userId)
     .single();
-  if (error) {
-    alert("เช็คสิทธิ์ไม่สำเร็จ: " + error.message);
-    return;
-  }
+  if (error) { alert("เช็คสิทธิ์ไม่สำเร็จ: " + error.message); return; }
   if (data?.is_admin) {
     window.location.href = "logs.html";
   } else {
@@ -223,8 +276,51 @@ btnLogs.onclick = async () => {
   }
 };
 
-/* ---------- ADMIN RESET PASSWORD (ผ่าน backend) ---------- */
-async function adminResetPassword(){ /* ...โค้ดรีเซ็ตรหัสผ่าน... */ }
+/* ---------- ADMIN RESET PASSWORD (ผ่าน backend) ----------
+   จำเป็นต้องมี backend endpoint ที่ใช้ service role ทำงานจริง
+   ตัวอย่าง POST { email, new_password }
+   รอรับ response: { ok:true } หรือ error.message
+--------------------------------------------------------- */
+async function adminResetPassword(){
+  const email = (mEmail.value||"").trim();
+  const pw = (mPassword.value||"").trim();
+  mMsg.textContent = "";
+  if (!email) { mMsg.textContent = "กรุณากรอกอีเมล"; return; }
+  if (!pw || pw.length < 6) { mMsg.textContent = "รหัสผ่านอย่างน้อย 6 ตัวอักษร"; return; }
+  if (!BACKEND_BASE) { alert("ยังไม่ได้ตั้งค่า BACKEND_BASE สำหรับรีเซ็ตรหัสผ่าน"); return; }
+
+  try{
+    mMsg.textContent = "กำลังดำเนินการ...";
+    const res = await fetch(`${BACKEND_BASE}/admin/reset-password`, {
+      method: "POST",
+      headers: { "Content-Type":"application/json" },
+      body: JSON.stringify({ email, new_password: pw })
+    });
+    const j = await res.json().catch(()=> ({}));
+    if (!res.ok) {
+      mMsg.textContent = "❌ " + (j?.error || `HTTP ${res.status}`);
+      return;
+    }
+    mMsg.textContent = "✅ รีเซ็ตรหัสผ่านสำเร็จ";
+    setTimeout(()=> modal.classList.remove("show"), 800);
+  }catch(e){
+    mMsg.textContent = "❌ " + e.message;
+  }
+}
+
+/* ---------- ปุ่มเทสดาต้า (ช่วยดีบัคชื่อคอลัมน์/ตาราง) ---------- */
+btnCheckMe.onclick = async () => {
+  try {
+    const { data, error } = await supabase
+      .from(TABLE)
+      .select([COLS.id, COLS.code, COLS.ua, COLS.createdAt].join(","))
+      .limit(1);
+    if (error) { alert("❌ " + error.message); return; }
+    alert("✅ OK: " + JSON.stringify(data?.[0] || null, null, 2));
+  } catch (e) {
+    alert("❌ Exception: " + e.message);
+  }
+};
 </script>
 </body>
 </html>
