--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -57,7 +57,7 @@
         <tr>
           <th style="width:36px"><input type="checkbox" id="checkAll"></th>
           <th>ID</th>
-          <th>Code</th>
+          <th>Uuid</th>
           <th>User Agent</th>
           <th>Created At</th>
           <th class="right">Action</th>
