--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,13 +6,13 @@
   <title>QR สุ่มอัตโนมัติ</title>
   <style>
     :root{
-      --bg:#0b0c10;        /* พื้นหลังหน้า (ดำ) */
+      --bg:#0b0c10;        
       --fg:#e5e7eb;
       --muted:#9ca3af;
       --shadow:0 8px 32px rgba(0,0,0,.45);
-      --qr-size: 512px;    /* ✅ ขนาดตัวภาพ QR (ไม่รวมกรอบ) */
-      --frame: 20px;       /* ✅ ความหนากรอบสีขาวรอบ QR */
-      --radius: 16px;      /* มุมโค้งกรอบ */
+      --qr-size: 250px;    /* ✅ ลดขนาด QR เป็น 250×250 px */
+      --frame: 20px;       /* ความหนากรอบขาว */
+      --radius: 16px;      
     }
     body{
       margin:0; background:var(--bg); color:var(--fg);
@@ -23,26 +23,23 @@
     .title{font-weight:800; letter-spacing:.2px; text-align:center; margin:0;}
     .size{color:var(--muted); font-weight:700; letter-spacing:.2px; text-align:center;}
 
-    /* ✅ กรอบสีขาวรอบ QR */
     .qr-frame{
-      background:#ffffff;                 /* กรอบสีขาว */
-      padding:var(--frame);               /* ความหนากรอบ */
+      background:#ffffff;                 
+      padding:var(--frame);               
       border-radius:var(--radius);
       box-shadow:var(--shadow);
       display:inline-block;
     }
 
-    /* กล่องสำหรับวาง QR (ขนาดพอดีกับ --qr-size) */
     .qr-box{
       width:var(--qr-size);
       height:var(--qr-size);
       display:flex; align-items:center; justify-content:center;
     }
 
-    /* ตัวแคนวาส/รูปของ lib qrcodejs */
     #qrCanvas canvas, #qrCanvas img{
       width:100%; height:100%;
-      background:#fff;                    /* ✅ พื้นหลัง + Quiet Zone = ขาว */
+      background:#fff;                    
       display:block;
       border-radius:calc(var(--radius) - 6px);
     }
@@ -65,30 +62,26 @@
 
   <div id="sizeLabel" class="size">ขนาด: —</div>
 
-  <!-- ✅ กรอบขาวครอบ QR -->
   <div class="qr-frame">
     <div class="qr-box"><div id="qrCanvas" aria-label="QR"></div></div>
   </div>
 
   <div class="uuid" id="uuidText">—</div>
 
-  <!-- ตัวนับถอยหลัง -->
   <div class="countdown" aria-live="polite">
     สุ่มใหม่ใน: <span id="count">—</span> วินาที
   </div>
 
 <script>
 (function(){
-  // ==== ตั้งค่า ====
   const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
   const supabase = window.supabase.createClient?.(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  const PERIOD_MS = 30_000;              // เปลี่ยนทุก 30 วิ
-  const QR_PX = 512;                     // ✅ ต้องตรงกับ --qr-size
-  const QUIET_MARGIN = 4;                // ✅ Quiet Zone = 4 โมดูล (มาตรฐาน)
+  const PERIOD_MS = 30_000;  
+  const QR_PX = 250;         // ✅ ต้องตรงกับ --qr-size
+  const QUIET_MARGIN = 4;    
 
-  // ==== อ้างอิง DOM ====
   const sizeLabel = document.getElementById('sizeLabel');
   const uuidText  = document.getElementById('uuidText');
   const countEl   = document.getElementById('count');
@@ -97,7 +90,6 @@
   let nextAt = null;
   let ticker = null;
 
-  // รหัสอ่านง่าย (ตัด 0/O/I/1 ออก)
   function shortId(len){
     const alphabet = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789';
     const arr = new Uint32Array(len);
@@ -105,7 +97,6 @@
     return Array.from(arr).map(v => alphabet[v % alphabet.length]).join('');
   }
 
-  // วาด QR + Quiet Zone สีขาว
   function drawQR(text){
     qrBox.innerHTML = '';
     new QRCode(qrBox, {
@@ -113,14 +104,13 @@
       width: QR_PX,
       height: QR_PX,
       correctLevel: QRCode.CorrectLevel.M,
-      colorDark: "#000000",   // จุด QR
-      colorLight: "#ffffff",  // ✅ พื้นหลัง + Quiet Zone = ขาว
-      margin: QUIET_MARGIN    // ✅ ความกว้าง Quiet Zone (หน่วย = โมดูล)
+      colorDark: "#000000",
+      colorLight: "#ffffff",  
+      margin: QUIET_MARGIN
     });
     sizeLabel.textContent = `ขนาด: ${QR_PX}×${QR_PX} px`;
   }
 
-  // ส่งขึ้น Supabase (REST)
   async function sendToSupabase(code){
     if (!supabase) return;
     const payload = [{ uuid: code, user_agent: navigator.userAgent }];
@@ -136,7 +126,6 @@
     });
   }
 
-  // สร้าง QR ใหม่
   async function generateQR(){
     const code = shortId(12);
     uuidText.textContent = code;
@@ -145,7 +134,6 @@
     nextAt = Date.now() + PERIOD_MS;
   }
 
-  // ตัวนับถอยหลัง
   function startTicker(){
     if (ticker) clearInterval(ticker);
     ticker = setInterval(()=>{
@@ -157,7 +145,6 @@
     }, 250);
   }
 
-  // เริ่มทำงาน
   generateQR();
   startTicker();
 })();
