--- a/front-end/admin/admin.html
+++ b/front-end/admin/admin.html
@@ -5,32 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin Panel - QR Codes</title>
   <style>
-    :root{ --bg:#0b0c10; --fg:#e5e7eb; --muted:#9ca3af; --card:#111318; --accent:#2563eb; --accent-2:#1d4ed8; --danger:#dc2626; --border:rgba(255,255,255,.08); }
+    :root{
+      --bg:#0b0c10; --fg:#e5e7eb; --muted:#9ca3af; --card:#111318;
+      --accent:#2563eb; --accent-2:#1d4ed8; --danger:#dc2626; --border:rgba(255,255,255,.08);
+      --board-h:#1c1f27; --row-a:#14161d; --row-b:#0f1117; --glow:0 8px 32px rgba(0,0,0,.45);
+    }
+    *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--fg);font:14px/1.5 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
     .wrap{max-width:1100px;margin:20px auto;padding:16px}
     h1{margin:0 0 12px}
-    .bar{display:flex;gap:8px;align-items:center;background:var(--card);border:1px solid var(--border);padding:10px;border-radius:12px}
+
+    /* Info bar */
+    .info-bar{display:flex;gap:16px;align-items:center;background:var(--card);
+      border:1px solid var(--border);border-radius:12px;padding:10px 12px;box-shadow:var(--glow)}
+    .chip{display:inline-flex;align-items:center;gap:8px;background:#0f1117;
+      border:1px solid var(--border);padding:8px 10px;border-radius:10px;font-weight:700}
+    .muted{color:var(--muted)}
+    .clock{margin-left:auto;font-weight:800;letter-spacing:.5px}
+
+    /* Toolbar */
+    .bar{display:flex;gap:8px;align-items:center;background:var(--card);
+      border:1px solid var(--border);padding:10px;border-radius:12px;margin-top:12px}
     .spacer{flex:1}
-    input[type="search"]{padding:8px 10px;border-radius:10px;border:1px solid var(--border);background:transparent;color:var(--fg);min-width:320px}
+    input[type="search"]{padding:8px 10px;border-radius:10px;border:1px solid var(--border);
+      background:transparent;color:var(--fg);min-width:300px}
     button{padding:8px 12px;border:none;border-radius:10px;cursor:pointer}
     .btn{background:var(--accent);color:#fff}.btn:hover{background:var(--accent-2)}
     .btn-ghost{background:transparent;color:var(--fg);border:1px solid var(--border)}
     .btn-del{background:var(--danger);color:#fff}
-    table{width:100%;border-collapse:collapse;margin-top:12px}
-    th,td{border:1px solid var(--border);padding:10px;text-align:left}
-    th{background:#14161d}
-    tr:nth-child(even){background:#0f1117}
-    .right{text-align:right}
-    .muted{color:var(--muted)}
-    .foot{display:flex;justify-content:space-between;align-items:center;margin-top:6px}
-    select{background:transparent;color:var(--fg);border:1px solid var(--border);border-radius:8px;padding:6px}
-    .modal{position:fixed;inset:0;display:none;place-items:center;background:rgba(0,0,0,.55)}
-    .modal.show{display:grid}
-    .card{background:var(--card);border:1px solid var(--border);padding:16px;border-radius:12px;min-width:320px}
-    .card h3{margin:0 0 10px}
-    .card label{font-size:12px;color:var(--muted)}
-    .card input{width:100%;padding:8px 10px;border-radius:10px;border:1px solid var(--border);background:transparent;color:var(--fg)}
-    .row{display:flex;gap:8px;justify-content:flex-end;margin-top:12px}
+
+    /* Flight board table */
+    .board{margin-top:12px;border:2px solid #2a2e3a;border-radius:10px;overflow:hidden;box-shadow:var(--glow)}
+    table{width:100%;border-collapse:collapse;font-size:15px;table-layout:fixed}
+    thead th{background:var(--board-h);text-transform:uppercase;letter-spacing:.4px;
+      padding:12px 10px;border-bottom:1px solid #2a2e3a}
+    tbody td{padding:12px 10px;border-bottom:1px solid #151822}
+    tbody tr:nth-child(odd){background:var(--row-a)}
+    tbody tr:nth-child(even){background:var(--row-b)}
+    .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
+    .nowrap{white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+
+    /* จัดให้อยู่กลางทุกช่อง */
+    thead th, tbody td {
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    /* Footer + notice */
+    .foot{display:flex;justify-content:space-between;align-items:center;margin-top:8px}
+    .notice{margin-top:6px;color:#fbbf24;font-size:13px}
   </style>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -38,193 +61,160 @@
   <div class="wrap">
     <h1>ระบบหลังบ้าน - QR Codes</h1>
 
-    <div class="bar">
-      <button class="btn" id="btnReload">🔄 โหลดข้อมูล</button>
-      <button class="btn-ghost" id="btnExport">⬇️ ส่งออก CSV</button>
-      <button class="btn-del" id="btnBulkDelete">🗑️ ลบที่เลือก</button>
-      <span class="spacer"></span>
-
-      <input id="search" type="search" placeholder="ค้นหา..." autocomplete="off" />
-
-      <button class="btn-ghost" id="btnCheckMe">🔎 เทส backend</button>
-      <button class="btn-ghost" id="btnLogs">📜 Logs</button> <!-- ✅ ปุ่ม Logs -->
-      <button class="btn-ghost" id="btnResetPw">🔑 รีเซ็ตรหัสผู้ใช้</button>
-      <button class="btn-ghost" id="btnLogout">🚪 Logout</button>
+    <!-- Summary -->
+    <div class="info-bar">
+      <div class="chip">👥 ผู้ใช้ทั้งหมด: <span id="totalUsers" class="mono">—</span></div>
+      <div class="chip">🗄️ จำนวนฐาน: <span id="totalTables" class="mono">—</span></div>
+      <div class="clock" id="clock">--:--:--</div>
     </div>
 
-    <table id="qrTable" aria-label="รายการ QR Codes">
-      <thead>
-        <tr>
-          <th style="width:36px"><input type="checkbox" id="checkAll"></th>
-          <th>ID</th>
-          <th>Code</th>
-          <th>User Agent</th>
-          <th>Created At</th>
-          <th class="right">Action</th>
-        </tr>
-      </thead>
-      <tbody id="tbody"><tr><td class="muted" colspan="6">กำลังโหลด...</td></tr></tbody>
-    </table>
+    <!-- Toolbar -->
+    <div class="bar">
+      <button class="btn" id="btnReload">🔄 โหลดข้อมูล</button>
+      <span class="spacer"></span>
+      <input id="search" type="search" placeholder="ค้นหา (ID / Code / User Agent)" autocomplete="off" />
+      <button class="btn-ghost" id="btnExport">⬇️ ส่งออก CSV</button>
+      <button class="btn-del" id="btnLogout">🚪 Logout</button>
+    </div>
+
+    <!-- Flight-board style table -->
+    <div class="board">
+      <table aria-label="รายการ QR Codes">
+        <thead>
+          <tr>
+            <th style="width:80px">ID</th>
+            <th style="width:120px">Time</th>
+            <th>UUID</th>
+            <th>User-Code-Name</th>
+          </tr>
+        </thead>
+        <tbody id="tbody"><tr><td colspan="4" class="muted">กำลังโหลด...</td></tr></tbody>
+      </table>
+    </div>
 
     <div class="foot">
       <div id="countLabel" class="muted">—</div>
-      <div>ต่อหน้า
-        <select id="pageSize"><option>10</option><option selected>20</option><option>50</option><option>100</option></select>
-        <span id="pageInfo" class="muted" style="margin-left:8px">หน้า 1/1</span>
-      </div>
+      <div class="muted">อัปเดตล่าสุด: <span id="lastUpdate">—</span></div>
     </div>
-  </div>
-
-  <!-- Modal Reset Password -->
-  <div id="modal" class="modal" aria-hidden="true">
-    <div class="card">
-      <h3>รีเซ็ตรหัสผ่านผู้ใช้</h3>
-      <label>Email</label>
-      <input id="mEmail" type="email" placeholder="user@example.com" />
-      <label style="margin-top:8px">รหัสผ่านใหม่</label>
-      <input id="mPassword" type="password" placeholder="อย่างน้อย 6 ตัว" />
-      <div id="mMsg" class="muted" style="margin-top:6px"></div>
-      <div class="row">
-        <button class="btn-ghost" id="mCancel">ยกเลิก</button>
-        <button class="btn" id="mSubmit">บันทึก</button>
-      </div>
-    </div>
+    <div id="notice" class="notice"></div>
   </div>
 
 <script>
-/* ---------- CONFIG ---------- */
-const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";   // 👈 เปลี่ยนเป็นของคุณ
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";                 // 👈 เปลี่ยนเป็นของคุณ
-const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY, {
-  auth: { persistSession: true, autoRefreshToken: true, detectSessionInUrl: true }
-});
+const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
+const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const tz = 'Asia/Bangkok';
+const fmtTime = new Intl.DateTimeFormat('th-TH',{hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:false,timeZone:tz});
+const fmtFull = new Intl.DateTimeFormat('th-TH',{dateStyle:'medium', timeStyle:'medium', hour12:false, timeZone:tz});
 
-/* ---------- ELEMENTS ---------- */
-const tbody = document.getElementById("tbody");
-const btnReload = document.getElementById("btnReload");
-const btnExport = document.getElementById("btnExport");
-const btnBulkDelete = document.getElementById("btnBulkDelete");
-const btnLogout = document.getElementById("btnLogout");
-const btnCheckMe = document.getElementById("btnCheckMe");
-const btnLogs = document.getElementById("btnLogs");
-const search = document.getElementById("search");
-const checkAll = document.getElementById("checkAll");
-const pageSize = document.getElementById("pageSize");
-const pageInfo = document.getElementById("pageInfo");
-const countLabel = document.getElementById("countLabel");
-const tzFmt = new Intl.DateTimeFormat('th-TH',{dateStyle:'medium', timeStyle:'medium', hour12:false, timeZone:'Asia/Bangkok'});
+const tbody=document.getElementById("tbody");
+const totalUsers=document.getElementById("totalUsers");
+const totalTables=document.getElementById("totalTables");
+const clock=document.getElementById("clock");
+const btnReload=document.getElementById("btnReload");
+const btnExport=document.getElementById("btnExport");
+const btnLogout=document.getElementById("btnLogout");
+const search=document.getElementById("search");
+const countLabel=document.getElementById("countLabel");
+const lastUpdate=document.getElementById("lastUpdate");
+const notice=document.getElementById("notice");
 
-/* Modal elems */
-const modal = document.getElementById("modal");
-const mEmail = document.getElementById("mEmail");
-const mPassword = document.getElementById("mPassword");
-const mMsg = document.getElementById("mMsg");
-document.getElementById("btnResetPw").onclick = () => { mEmail.value=""; mPassword.value=""; mMsg.textContent=""; modal.classList.add("show"); };
-document.getElementById("mCancel").onclick = () => modal.classList.remove("show");
-document.getElementById("mSubmit").onclick = adminResetPassword;
+setInterval(()=>{ clock.textContent = fmtTime.format(new Date()); },1000);
 
-/* ---------- SESSION GATE ---------- */
-(async () => {
-  const { data:{ session } } = await supabase.auth.getSession();
-  if (!session) { window.location.href = "login.html"; return; }
-  search.value = "";
-  setTimeout(() => search.value = "", 0);
-  loadData();
-})();
+async function loadSummary(){
+  try{
+    const { data } = await supabase.from("profiles").select("id").order("id",{ascending:false}).limit(1).maybeSingle();
+    totalUsers.textContent = data?.id ?? "—";
+  }catch{ totalUsers.textContent="—"; }
 
-/* ---------- STATE / RENDER ---------- */
-const st = { raw:[], filtered:[], page:1, pageSize:20 };
-function fmtDate(iso){const d = new Date(iso);return isNaN(d)? "-" : tzFmt.format(d);}
-function applyFilter(){
-  let q=(search.value||"").trim().toLowerCase();
-  if (q.includes('@')) q = "";
-  st.filtered = st.raw.filter(r=>{
+  try{
+    const { data } = await supabase.rpc("get_table_count");
+    totalTables.textContent = data ?? "—";
+  }catch{ totalTables.textContent="—"; }
+}
+
+let RAW=[];
+async function loadTable(){
+  tbody.innerHTML=`<tr><td colspan="4" class="muted">⏳ กำลังโหลด...</td></tr>`;
+  notice.textContent="";
+
+  const oneHourAgo=new Date(Date.now()-60*60*1000).toISOString();
+
+  let { data, error } = await supabase.from("qrcodes")
+    .select("id,code,user_agent,created_at")
+    .gte("created_at",oneHourAgo)
+    .order("created_at",{ascending:false})
+    .limit(25);
+
+  if(error){ tbody.innerHTML=`<tr><td colspan="4">❌ ${error.message}</td></tr>`; return; }
+
+  if(!data || data.length===0){
+    const res = await supabase.from("qrcodes").select("id,code,user_agent,created_at")
+      .order("created_at",{ascending:false}).limit(25);
+    if(!res.error){ data = res.data; }
+    notice.textContent = "⚠️ ไม่มีข้อมูลใน 1 ชั่วโมงล่าสุด แสดงข้อมูลล่าสุดแทน";
+  }
+
+  RAW = data || [];
+  renderTable();
+  lastUpdate.textContent = fmtFull.format(new Date());
+}
+
+function renderTable(){
+  const q=(search.value||"").trim().toLowerCase();
+  const rows=RAW.filter(r=>{
     if(!q) return true;
     return String(r.id).toLowerCase().includes(q)
         || String(r.code||"").toLowerCase().includes(q)
         || String(r.user_agent||"").toLowerCase().includes(q);
   });
-  st.page=1;
-}
-function getPageData(){const start=(st.page-1)*st.pageSize;return st.filtered.slice(start,start+st.pageSize);}
-function render(){
-  const rows = getPageData();
+
   if(rows.length===0){
-    tbody.innerHTML = `<tr><td colspan="6" class="muted">ไม่มีข้อมูล</td></tr>`;
+    tbody.innerHTML=`<tr><td colspan="4" class="muted">ไม่มีข้อมูล</td></tr>`;
   }else{
-    tbody.innerHTML = "";
-    for(const r of rows){
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td><input type="checkbox" class="rowcheck" value="${r.id}"></td>
-        <td>${r.id}</td>
-        <td><span>${r.code ?? ""}</span></td>
-        <td class="muted" title="${r.user_agent||""}">${r.user_agent||"-"}</td>
-        <td>${fmtDate(r.created_at)}</td>
-        <td class="right"><button class="btn-del" data-del="${r.id}">ลบ</button></td>`;
-      tbody.appendChild(tr);
-    }
-    tbody.querySelectorAll("[data-del]").forEach(btn=>btn.onclick=()=>deleteRow(btn.dataset.del));
+    tbody.innerHTML = rows.map(r=>{
+      const t = r.created_at ? fmtTime.format(new Date(r.created_at)) : "-";
+      const ua = (r.user_agent||"-").replaceAll("<","&lt;").replaceAll(">","&gt;");
+      const code = (r.code??"-").toString().replaceAll("<","&lt;").replaceAll(">","&gt;");
+      return `
+        <tr>
+          <td class="mono">${r.id}</td>
+          <td class="mono">${t}</td>
+          <td class="mono nowrap" title="${code}">${code}</td>
+          <td class="nowrap" title="${ua}">${ua}</td>
+        </tr>`;
+    }).join("");
   }
-  const total = st.filtered.length;
-  const pages = Math.max(1, Math.ceil(total/st.pageSize));
-  if(st.page>pages) st.page=pages;
-  pageInfo.textContent = `หน้า ${st.page}/${pages}`;
-  countLabel.textContent = `ทั้งหมด ${total} รายการ`;
+  countLabel.textContent = `ทั้งหมด ${rows.length} รายการ (จาก ${RAW.length})`;
 }
 
-/* ---------- CRUD ---------- */
-async function loadData(){
-  tbody.innerHTML = `<tr><td colspan="6" class="muted">กำลังโหลด...</td></tr>`;
-  const { data, error } = await supabase
-    .from("qrcodes")
-    .select("id, code, user_agent, created_at")
-    .order("created_at",{ascending:false})
-    .limit(1000);
-  if(error){ tbody.innerHTML = `<tr><td colspan="6">❌ ${error.message}</td></tr>`; return; }
-  st.raw = data||[]; applyFilter(); render();
-}
-async function deleteRow(id){
-  if(!confirm(`ลบรายการนี้หรือไม่? (${id})`)) return;
-  const { error } = await supabase.from("qrcodes").delete().eq("id", id);
-  if(error){ alert("❌ "+error.message); return; }
-  st.raw = st.raw.filter(x=>String(x.id)!==String(id));
-  applyFilter(); render();
-}
-
-/* ---------- EXPORT / UI EVENTS ---------- */
-btnExport.onclick = ()=>{ /* ...โค้ดส่งออก CSV เหมือนเดิม... */ };
-btnReload.onclick = loadData;
-search.addEventListener('keyup', ()=>{ applyFilter(); render(); });
-search.addEventListener('search', ()=>{ applyFilter(); render(); });
-pageSize.onchange = ()=>{ st.pageSize=parseInt(pageSize.value,10); render(); };
-checkAll.onchange = ()=>{ document.querySelectorAll(".rowcheck").forEach(cb=> cb.checked = checkAll.checked); };
-btnBulkDelete.onclick = async ()=>{ /* ...โค้ดลบหลายรายการ... */ };
+btnReload.onclick = async ()=>{ await loadSummary(); await loadTable(); };
 btnLogout.onclick = async ()=>{ await supabase.auth.signOut(); window.location.href="login.html"; };
+search.addEventListener('input', renderTable);
 
-/* ---------- LOGS BUTTON (เฉพาะ admin) ---------- */
-btnLogs.onclick = async () => {
-  const { data:{ session } } = await supabase.auth.getSession();
-  if (!session) { alert("กรุณาล็อกอินก่อน"); return; }
-  const userId = session.user.id;
-  const { data, error } = await supabase
-    .from("profiles")
-    .select("is_admin")
-    .eq("id", userId)
-    .single();
-  if (error) {
-    alert("เช็คสิทธิ์ไม่สำเร็จ: " + error.message);
-    return;
-  }
-  if (data?.is_admin) {
-    window.location.href = "logs.html";
-  } else {
-    alert("❌ คุณไม่มีสิทธิ์เข้า Logs (Admin เท่านั้น)");
-  }
+btnExport.onclick = ()=>{
+  if(!RAW.length) return;
+  const header = ["id","time","code","user_agent"];
+  const lines = [header.join(",")];
+  RAW.forEach(r=>{
+    const t = r.created_at ? new Date(r.created_at).toISOString() : "";
+    const row = [
+      `"${r.id}"`,
+      `"${t}"`,
+      `"${(r.code??"").toString().replaceAll('"','""')}"`,
+      `"${(r.user_agent??"").replaceAll('"','""')}"`
+    ];
+    lines.push(row.join(","));
+  });
+  const blob = new Blob([lines.join("\n")], {type:"text/csv;charset=utf-8"});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url; a.download = `qrcodes_${Date.now()}.csv`; a.click();
+  URL.revokeObjectURL(url);
 };
 
-/* ---------- ADMIN RESET PASSWORD (ผ่าน backend) ---------- */
-async function adminResetPassword(){ /* ...โค้ดรีเซ็ตรหัสผ่าน... */ }
+(async()=>{ await loadSummary(); await loadTable(); })();
+setInterval(async()=>{ await loadSummary(); await loadTable(); }, 10000);
 </script>
 </body>
 </html>
